--- a/src/Components/Layout/style.css
+++ b/src/Components/Layout/style.css
@@ -1,3 +1,28 @@
 .page {
-  margin-left: 50px;
+  width: 75%;
+  margin: 50px auto;
+}
+.page_home-summary {
+  display: flex;
+  flex-flow: row nowrap;
+}
+.page_home-summary-articles {
+  margin: 0 auto;
+  display: flex;
+  flex-flow: column wrap;
+}
+.page_home-summary-articles article {
+  max-width: 350px;
+  max-height: 200px;
+  flex: 1;
+  margin: 2px;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 5px;
+}
+.page_home-summary-articles article header {
+  color: blue;
+}
+.page_title {
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
