--- a/src/Components/Layout/style.scss
+++ b/src/Components/Layout/style.scss
@@ -1,3 +1,34 @@
 .page {
-  margin-left: 50px;
+  width: 75%;
+
+  margin: 50px auto;
+
+  &_home {
+    &-summary {
+      display: flex;
+      flex-flow: row nowrap;
+      &-articles {
+        margin: 0 auto;
+        display: flex;
+        flex-flow: column wrap;
+        article {
+          max-width: 350px;
+          max-height: 200px;
+          flex: 1;
+          margin: 2px;
+          border: 2px solid black;
+          border-radius: 10px;
+          padding: 5px;
+          header {
+            color: blue;
+          }
+        }
+      }
+      &-portfolio {
+      }
+    }
+  }
+}
+.page_title {
+  text-align: center;
 }
