Small changes, preparing grounds for NavLinks and Links

--- a/src/Components/Layout/style.css
+++ b/src/Components/Layout/style.css
@@ -23,6 +23,12 @@
 .page_home-summary-articles article header {
   color: blue;
 }
+.page_home-description {
+  margin-top: 150px;
+  text-align: center;
+  font-size: 0.5rem;
+}
+
 .page_title {
   text-align: center;
 }/*# sourceMappingURL=style.css.map */
