--- a/src/Components/Layout/style.scss
+++ b/src/Components/Layout/style.scss
@@ -27,6 +27,11 @@
       &-portfolio {
       }
     }
+    &-description {
+      margin-top: 150px;
+      text-align: center;
+      font-size: 0.5rem;
+    }
   }
 }
 .page_title {
