--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,7 @@
     &-summary {
       display: flex;
       flex-flow: row nowrap;
-      &-articles {
+      &-projects {
         margin: 0 auto;
         display: flex;
         flex-flow: column wrap;
@@ -25,10 +25,30 @@
         }
       }
     }
-    &-description {
+    &-profile {
+      min-width: auto;
+      min-height: fit-content;
+      display: flex;
+      flex-flow: row nowrap;
+      border: 2px solid black;
+      border-radius: 10px;
       margin-top: 150px;
       text-align: center;
-      font-size: 0.5rem;
+      font-size: 1rem;
+      &-text {
+        border-left: 1px solid black;
+        padding-left: 10px;
+        padding-right: 10px;
+        text-align: left;
+      }
+      img {
+        border-radius: 50%;
+        margin: auto auto;
+        object-fit: contain;
+      }
+      h3 {
+        font-size: 1rem;
+      }
     }
   }
 }
@@ -61,7 +81,8 @@
     top: 50%;
     margin-top: -120px;
     width: 100%;
-    a {
+    .nav-icon {
+      cursor: pointer;
       font-size: 22px;
       display: block;
       line-height: 51px;
